// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports (default tab) 1`] = `
{
  "lines": 487,
  "sha256": "63ce312bb9469a8093b51ee37281b260148c5106e4b43fe51afca236cbae4c69",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports ?tab=aging 1`] = `
{
  "lines": 398,
  "sha256": "5cb79de21a21b7ee53aa1f130a01cf8e81a7198cd32fe5b5ad89b2b5ef4d74dd",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports ?tab=aging with three issued invoices (the aging rows drawn) 1`] = `
{
  "lines": 553,
  "sha256": "2bbc509b52ef4d8b0981c496e78473963109af2e012703ea580388563160f2ef",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports default tab with three issued invoices (billed figures on the WIP rows) 1`] = `
{
  "lines": 487,
  "sha256": "9badf871d44e8fec12b038204d75df912307d44c59ac2d61c812cd46a5cd83f8",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports: Profit pressed 1`] = `
{
  "lines": 431,
  "sha256": "c1f648187841e79df1835a0392f7429c037ed82604d858fa38d1107aca9cb16a",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) wip-report (drill sheet + period picker mounted) 1`] = `
{
  "lines": 716,
  "sha256": "09af49c95419d197e755153159ed14e430a8eea5ddac1061cda73e7959e69fa7",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) wip-report: the first project row pressed (the drill sheet drawn) 1`] = `
{
  "lines": 803,
  "sha256": "e0fafa9a2b4865add331e326c5caeed8b0a55258fa314163e6702f02730fff2e",
}
`;
